appId: com.8bit.bitwarden
---
- launchApp:
    clearState: true
    stopApp: true
- extendedWaitUntil:
    visible: "Log in"
    timeout: 60000
- tapOn: "Log in"
- extendedWaitUntil:
    visible:
      id: "LoginEmailAddressEntry"
    timeout: 30000
- runFlow: _self-hosted.yaml
- tapOn:
    id: "LoginEmailAddressEntry"
- inputText: ${EMAIL}
- tapOn:
    id: "ContinueButton"
- extendedWaitUntil:
    visible:
      id: "LoginMasterPasswordEntry"
    timeout: 30000
- tapOn:
    id: "LoginMasterPasswordEntry"
- inputText: ${PASSWORD}
- tapOn:
    id: "LogInWithMasterPasswordButton"
- runFlow: _reach-vault.yaml
