appId: com.8bit.bitwarden
---
- launchApp:
    clearState: true
    stopApp: true
- extendedWaitUntil:
    visible: "Log in"
    timeout: 60000
- tapOn: "Log in"
- extendedWaitUntil:
    visible:
      id: "LoginEmailAddressEntry"
    timeout: 30000
- runFlow: _self-hosted.yaml
- tapOn:
    id: "CreateAccountButton"
- tapOn:
    id: "EmailAddressEntry"
- inputText: ${EMAIL}
- tapOn:
    id: "NameEntry"
- inputText: Example User
- tapOn:
    id: "ContinueButton"
- extendedWaitUntil:
    visible:
      id: "MasterPasswordEntry"
    timeout: 120000
- tapOn:
    id: "MasterPasswordEntry"
- inputText: ${PASSWORD}
- pressKey: Enter
- inputText: ${PASSWORD}
- pressKey: Enter
- inputText: example hint
- assertVisible: "NEVER_PRESENT_PROBE_END"
